0.12 Cook stations working on client