@@ -32,6 +32,8 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
     private GameManager manager = this;
     private boolean connectedToServer = false;
 
+    private Timer gameloop;
+
     public GameManager(GUtility util, String ip, int port, String name) {
 
         super(ip, port);
@@ -46,7 +48,7 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
 
     private void gameLoop() {
 
-        Timer timer = new Timer();
+        gameloop = new Timer();
 
         util.getPanel().addMouseListener(new MouseListener() {
             @Override
@@ -56,8 +58,9 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
 
             @Override
             public void mousePressed(MouseEvent e) {
-                left = true;
-                right = true;
+                if(e.getButton() == 1){left = true;}
+                if(e.getButton() == 3){right = true;}
+
             }
 
             @Override
@@ -127,7 +130,7 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
             }
         });
 
-        timer.scheduleAtFixedRate(new TimerTask() {
+        gameloop.scheduleAtFixedRate(new TimerTask() {
             @Override
             public void run() {
 
@@ -135,7 +138,7 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
                 //If multiple buttons were pressed they will all be detected during a frame
                 self.updateMovement(w, a, s, d, manager);
                 if(self.getStationsCurrentlyIn().size() == 1){
-                    kManager.interaction(self.getStationsCurrentlyIn().getFirst(), left, right, e);
+                    kManager.interaction(self.getStationsCurrentlyIn().get(0), left, right, e);
                 }
 
                 left = false;
@@ -303,5 +306,78 @@ public class GameManager extends Client{ //GameLoop, updates, Room, times
 
     public PlayerSelf getPlayerself() {
         return self;
+    }
+
+    public void closeGame(String reason){
+
+        gameloop.cancel();
+
+        Label label = new Label();
+        label.setText(reason.equals("LEAVE") ? Constants.GAMECLOSEDUETOPLAYERLEAVE : Constants.GAMECLOSEDUETOGAMEEND);
+        label.setSize(Constants.WIDTH/10*8, Constants.HEIGHT/7);
+        label.setLocation(Constants.WIDTH/10, Constants.HEIGHT/2);
+        label.setFont(new Font("", Font.BOLD, (int) (Constants.FONTSIZE/(1.5))));
+        util.getPanel().addComponent(label);
+
+        Timer timer = new Timer();
+        timer.schedule(new TimerTask() {
+            @Override
+            public void run() {
+
+                label.setVisible(false);
+                System.exit(0);
+
+            }
+        },3000);
+
+    }
+
+    public void giveRoomCountdown(){
+
+        Timer timer = new Timer();
+
+        final int[] times = {0};
+
+        Label label = new Label();
+        label.setText(Constants.GAMESTARTSIN+(5-times[0]));
+        label.setSize(Constants.WIDTH/5*4, Constants.HEIGHT/7);
+        label.setLocation(Constants.WIDTH/5, Constants.HEIGHT/2);
+        label.setFont(new Font("", 0, (int) (Constants.FONTSIZE/(1.5))));
+        util.getPanel().addComponent(label);
+        timer.scheduleAtFixedRate(new TimerTask() {
+            @Override
+            public void run() {
+
+                times[0]++;
+
+                label.setText(Constants.GAMESTARTSIN+(5-times[0]));
+
+                if(times[0] == 5){label.setVisible(false); this.cancel();}
+            }
+        }, 0,1000);
+
+    }
+
+    public void startRoom(){
+
+        kManager.setActive(true);
+
+        Label label = new Label();
+        label.setText(Constants.GAMESTART);
+        label.setSize(Constants.WIDTH/5*2, Constants.HEIGHT/7);
+        label.setLocation(Constants.WIDTH/5, Constants.HEIGHT/2);
+        label.setFont(new Font("", Font.BOLD, (int) (Constants.FONTSIZE/(1.5))));
+        util.getPanel().addComponent(label);
+
+        Timer timer = new Timer();
+        timer.schedule(new TimerTask() {
+            @Override
+            public void run() {
+
+                label.setVisible(false);
+
+            }
+        },2000);
+
     }
 }
